apps/portfolio-next/envs/dev/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-next
  namespace: portfolio-next
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: web
          image: ghcr.io/wlodzimierrr/portfolio-next:sha-7a03d26993d0b6904b94efe7f0efc694b47f7c16
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 300m
              memory: 256Mi
