apps/portfolio-next/envs/dev/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio-next
  namespace: portfolio-next
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http01
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  tls:
    - hosts:
        - wlodzimierrr.pl
      secretName: portfolio-next-tls
  rules:
    - host: wlodzimierrr.pl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: portfolio-next
                port:
                  number: 80
